# inspector-gadget

./: .gitignore  PRODUCT.md  README.md  pyproject.toml
.github/: FUNDING.yml
docs/: about.md  steps.md
examples/: adapt_networkx.py  foo.ipynb
gadget/: graph.py  utils.py
inspector_gadget/: __init__.py  contexts.py  gadget.py
inspector_gadget/examples/: _temp_core_interface_inspect.py  _temp_nx_inspect.py  daft_expert_oai_agent.py  foo.ipynb
inspector_gadget/prompts/: extract_faif_patterns.py  zen_of_python.txt
prompts/: python_agent_system_prompt.txt
