[project]
name = "inspector-gadget"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "everettVT", email = "everett@vangelis.tech" }
]
requires-python = ">=3.10"
dependencies = [
    "daft>=0.4.13",
    "ipykernel>=6.29.5",
    "lancedb>=0.22.0",
    "langchain>=0.3.25",
    "lark>=1.2.2",
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "openai>=1.77.0",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "tiktoken>=0.9.0",
]

[project.scripts]
inspector-gadget = "inspector_gadget:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
